# FBGS-sensing

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.022d0b3  LICENSE  README.md  main.cpp
MATLAB/FBGS/: process_data_from_csv.asv  process_data_from_csv.m  visualise_data.m
benchmarks/: CMakeLists.txt  benchmark_reading.cpp
data/100Hz/illumisense/: simulation_results_5s.yaml
data/100Hz/long_measurements/: Rod_1_tip_accelerations.fig  Rod_1_tip_positions.fig  Rod_1_tip_velocities.fig  Samples_number.fig  simulation_results_5s.yaml
data/100Hz/mutex/: FBGS_data.csv  simulation_results_6s.yaml
data/100Hz/prova_new_interface/: Rod_1_tip_accelerations.fig  Rod_1_tip_positions.fig  Rod_1_tip_velocities.fig  Samples_number.fig  simulation_results_5s.yaml
data/100Hz/two_sensors/: Rod_1_tip_accelerations.fig  Rod_1_tip_positions.fig  Rod_1_tip_velocities.fig  Samples_number.fig  simulation_results_1s.yaml  simulation_results_5s.yaml
include/: fbgs_interface.h  illumisense_interface.h  shape_sensing_interface.h
src/: CMakeLists.txt  fbgs_interface.cpp  illumisense_interface.cpp  main.cpp  read_and_save_data.cpp  save_with_mutex.cpp  shape_sensing_interface.cpp  test_tcpip_connection.cpp
src/fbgs-sensing/: illumisense_interface.cpp  shape_sensing_interface.cpp
src/include/fbgs-sensing/: illumisense_interface.h  shape_sensing_interface.h
